@@ -23,7 +23,7 @@
 # This version is bumped whenever enhancements are made
 # to the `project.conf` format or the core element format.
 #
-BST_FORMAT_VERSION = 17
+BST_FORMAT_VERSION = 18
 
 
 # The base BuildStream artifact version
