@@ -1,11 +1,3 @@
-# No variables added for the manual element by default, set
-# this if you plan to use make, and the sources cannot handle
-# parallelization.
-#
-# variables:
-#
-#   notparallel: True
-
 # Manual build element does not provide any default
 # build commands
 config:
@@ -28,14 +20,3 @@ config:
   strip-commands:
   - |
     %{strip-binaries}
-
-# Use max-jobs CPUs for building and enable verbosity
-environment:
-  MAKEFLAGS: -j%{max-jobs}
-  V: 1
-
-# And dont consider MAKEFLAGS or V as something which may
-# affect build output.
-environment-nocache:
-- MAKEFLAGS
-- V
